feat(menu): add general style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-header m_tittle="Country"></app-header>
-<h1>Welcome</h1>
+<div id="AppComponent">
+    <app-header m_tittle="Country"></app-header>
+    <app-menu></app-menu>
+</div>
