--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,15 +1,3 @@
 #HeaderComponent h1 {
-    /* general */
-    height: 40px;
-    width: 200px;
-    margin: auto auto auto;
-    border : solid 5px #212121;
-    padding: 8px;
-    background: #FF5B00;
-    font-size: 30px;
-    color: white;
-    text-align: center;
-
-    /* adjust */
-    margin-top: -5px;
+    background: red;
 }
