refactor(src): use angular material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,118 @@
-<div id="AppComponent">
+<div class="app_header">
     <app-header m_tittle="Country"></app-header>
     <app-menu></app-menu>
 </div>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
+<p>sdfsdfsdf</p>
