--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,5 @@
-<div id="HeaderComponent">
-    <h1>{{m_tittle}}</h1>
-</div>
+<mat-toolbar color="primary">
+    <span class="header_spacer"></span>
+    <span class="header_tittle">{{m_tittle}}</span>
+    <span class="header_spacer"></span>
+</mat-toolbar>
