--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,6 @@
-#AppComponent {
-    background-color: blue;
+.app_header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    box-shadow: 0px 5px 5px darkgray;
 }
