--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,3 +1,8 @@
-#MenuComponent {
-    background-color: green;
+.menu_button {
+    margin: 0 25px 20px;
+    transform: scale(2);
+}
+
+.menu_spacer {
+    flex: 1 1 auto;
 }
