--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,117 +2,4 @@
     <app-header m_tittle="Country"></app-header>
     <app-menu></app-menu>
 </div>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
-<p>sdfsdfsdf</p>
+<router-outlet></router-outlet>
