refactor(header,menu): clean them

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-    <span class="header_spacer"></span>
-    <span class="header_tittle">{{m_tittle}}</span>
-    <span class="header_spacer"></span>
+    <div class="header_spacer"></div>
+    <div class="header_tittle">{{m_tittle}}</div>
+    <div class="header_spacer"></div>
 </mat-toolbar>
