--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,15 +1,15 @@
 <mat-toolbar color="primary">
-    <a  routerLink="/" class="menu_button" mat-icon-button>
+    <a  routerLink="/" class="menu_link" mat-icon-button>
         <mat-icon svgIcon="home"></mat-icon>
     </a>
-    <a routerLink="/research" class="menu_button" mat-icon-button>
+    <a routerLink="/research" class="menu_link" mat-icon-button>
         <mat-icon svgIcon="city"></mat-icon>
     </a>
     <span class="menu_spacer"></span>
-    <a class="menu_button" target="_blank" href="https://github.com/PamplemousseMR" mat-icon-button>
+    <a class="menu_link" target="_blank" href="https://github.com/PamplemousseMR" mat-icon-button>
         <mat-icon svgIcon="github-face"></mat-icon>
     </a>
-    <a class="menu_button" target="_blank" href="https://fr.linkedin.com/in/romain-manciaux-21989810a" mat-icon-button>
+    <a class="menu_link" target="_blank" href="https://fr.linkedin.com/in/romain-manciaux-21989810a" mat-icon-button>
         <mat-icon svgIcon="linkedin"></mat-icon>
     </a>
 </mat-toolbar>
