chore(header): change tittle to title

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app_header">
-    <app-header m_tittle="Country"></app-header>
+    <app-header m_title="Country"></app-header>
     <app-menu></app-menu>
 </div>
 <router-outlet></router-outlet>
