refactor(menu): set it independent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app_header">
     <app-header m_title="Country"></app-header>
-    <app-menu></app-menu>
+    <app-menu [m_localRoutes]="m_localRoutes" [m_externalLinks]="m_externalLinks"></app-menu>
 </div>
 <router-outlet></router-outlet>
