--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,35 @@
     <app-header m_title="Country"></app-header>
     <app-menu [m_localRoutes]="m_localRoutes" [m_externalLinks]="m_externalLinks"></app-menu>
 </div>
+<app-flux-header [m_title]="i_router.url[1].toUpperCase() + i_router.url.substring(2, i_router.url.length).toLowerCase()"></app-flux-header>
 <router-outlet></router-outlet>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
+<p>ds</p>
