--- a/src/app/research/research.component.html
+++ b/src/app/research/research.component.html
@@ -1,3 +1,40 @@
-<p>
-  research works!
-</p>
+<div>
+  <div class="research_spacer"></div>
+  <mat-form-field class="research_research" appearance="legacy">
+      <mat-label>Find a country</mat-label>
+      <input [(ngModel)]="m_country" matInput placeholder="Country">
+      <mat-icon matSuffix svgIcon="glass-flute"></mat-icon>
+  </mat-form-field>
+  <div class="research_spacer"></div>
+</div>
+<div *ngIf="m_countries">
+  <div *ngFor="let c of m_countries; let i = index">
+    <div *ngIf="c.name.toLowerCase().includes(m_country.toLowerCase())">
+      <mat-expansion-panel [expanded]="m_step === i" (opened)="setStep(i)">
+        <mat-expansion-panel-header>
+          <mat-panel-title class="research_title">{{c.name}}</mat-panel-title>
+          <mat-panel-description class="research_description">Capital : {{c.capital}}</mat-panel-description>
+        </mat-expansion-panel-header>
+        <mat-list>
+          <mat-divider></mat-divider>
+          <h3 mat-subheader>Native name:</h3>
+          <mat-list-item>
+            <p mat-line>{{c.nativeName}}</p>
+          </mat-list-item>
+          <mat-divider></mat-divider>
+          <h3 mat-subheader>Details:</h3>
+          <mat-list-item >
+            <p mat-line>Region: {{c.region}}</p>
+          </mat-list-item>
+          <mat-list-item>
+            <p mat-line>Subregion: {{c.subregion}}</p>
+          </mat-list-item>
+        </mat-list>
+        <mat-action-row>
+          <button mat-button color="warn" (click)="prevStep()">Previous</button>
+          <button mat-button color="primary" (click)="nextStep()">Next</button>
+        </mat-action-row>
+      </mat-expansion-panel>
+    </div>
+  </div>
+</div>
