refactor(assets): update icons

--- a/src/app/research/research.component.html
+++ b/src/app/research/research.component.html
@@ -3,7 +3,7 @@
   <mat-form-field class="research_research" appearance="legacy">
       <mat-label>Find a country</mat-label>
       <input [(ngModel)]="m_country" matInput placeholder="Country">
-      <mat-icon matSuffix svgIcon="glass-flute"></mat-icon>
+      <mat-icon matSuffix svgIcon="search"></mat-icon>
   </mat-form-field>
   <div class="research_spacer"></div>
 </div>
