--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,6 @@
 @import "normalize.css/normalize.css";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+body {
+    background-color: #f5f5f5;
+}
