--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,3 +5,15 @@
     box-shadow: 0px 1px 8px black;
     z-index: 1;
 }
+
+.app-footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    z-index: -1;
+}
+
+.app-router {
+    background-color: #f5f5f5;
+    margin-bottom: 80px;
+}
