--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <app-header m_title="Country"></app-header>
     <app-menu [m_localRoutes]="m_localRoutes" [m_externalLinks]="m_externalLinks"></app-menu>
 </div>
-<app-flux-header *ngIf="i_router.url[1]" [m_title]="i_router.url[1].toUpperCase() + i_router.url.substring(2, i_router.url.length).toLowerCase()"></app-flux-header>
+<app-flux-header *ngIf="i_router.url[1]" [m_title]="i_router.url.substring(1, i_router.url.length).toLowerCase() | titlecase "></app-flux-header>
 <div class="app-router">
     <router-outlet></router-outlet>
 </div>
