refactor(app): clean component

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <div class="footer_info">Designed by {{m_name}}</div>
+  <div class="footer_info">Designed by {{m_NAME}}</div>
   <div class="footer_spacer"></div>
-  <div class="footer_info">Copyright © {{m_date | date:'yyyy'}}</div>
+  <div class="footer_info">Copyright © {{m_DATE | date:'yyyy'}}</div>
 </mat-toolbar>
