--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="app_header">
-    <app-header m_title="Country"></app-header>
-    <app-menu [m_localRoutes]="m_localRoutes" [m_externalLinks]="m_externalLinks"></app-menu>
+    <app-header m_TITLE="Country"></app-header>
+    <app-menu [m_LOCALROUTES]="m_LOCALROUTES" [m_EXTERNALLINKS]="m_EXTERNALLINKS"></app-menu>
 </div>
-<app-flux-header *ngIf="i_router.url[1]" [m_title]="i_router.url.substring(1, i_router.url.length).toLowerCase() | titlecase "></app-flux-header>
+<app-flux-header *ngIf="i_router.url[1]" [m_TITLE]="i_router.url.substring(1, i_router.url.length).toLowerCase() | titlecase "></app-flux-header>
 <div class="app-router">
     <router-outlet></router-outlet>
 </div>
