--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
     <div class="header_spacer"></div>
-    <div class="header_title">{{m_title}}</div>
+    <div class="header_title">{{m_TITLE}}</div>
     <div class="header_spacer"></div>
 </mat-toolbar>
