--- a/src/app/research/research.component.html
+++ b/src/app/research/research.component.html
@@ -35,6 +35,7 @@
         </mat-list>
         <mat-action-row>
           <button mat-button color="warn" (click)="prevStep()">Previous</button>
+          <button mat-button color="accent" routerLink="/detail/{{c.alpha3Code}}">Informations</button>
           <button mat-button color="primary" (click)="nextStep()">Next</button>
         </mat-action-row>
       </mat-expansion-panel>
