fix(footer): call the right variable

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,4 @@
 <div class="app-router">
     <router-outlet></router-outlet>
 </div>
-<app-footer class="app-footer" m_name="Romain MANCIAUX"></app-footer>
+<app-footer class="app-footer" m_NAME="Romain MANCIAUX"></app-footer>
