--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -74,6 +74,6 @@
     </mat-tab-group>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button routerLink="/research" color="warn">Go back</button>
+    <button mat-button routerLink="/research" color="primary">GO BACK</button>
   </mat-card-actions>
 </mat-card>
