--- a/src/app/research/research.component.css
+++ b/src/app/research/research.component.css
@@ -1,14 +1,15 @@
 .research_selector {
   padding-right: 40px;
+  padding-left: 20px;
+}
+
+.research_subtitle {
+  padding-left: 15px;
 }
 
 .research_research {
   height: 80px;
   padding-top: 40px;
-}
-
-.research_spacer {
-  flex: 1 1 auto;
 }
 
 .research_input {
