--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <div class="app_header">
-    <app-header m_TITLE="Country"></app-header>
-    <app-menu [m_LOCALROUTES]="m_LOCALROUTES" [m_EXTERNALLINKS]="m_EXTERNALLINKS"></app-menu>
+  <app-header m_TITLE="Country"></app-header>
+  <app-menu [m_EXTERNALLINKS]="m_EXTERNALLINKS" [m_LOCALROUTES]="m_LOCALROUTES"></app-menu>
 </div>
-<app-flux-header *ngIf="i_router.url[1]" [m_TITLE]="(i_router.url.substring(1, i_router.url.length).toLowerCase() | titlecase).split('/')[0]"></app-flux-header>
+<app-flux-header *ngIf="i_router.url[1]"
+                 [m_TITLE]="(i_router.url.substring(1, i_router.url.length).toLowerCase() | titlecase).split('/')[0]"></app-flux-header>
 <div class="app-router">
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 </div>
 <app-footer class="app-footer" m_NAME="Romain MANCIAUX"></app-footer>
