--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -3,7 +3,7 @@
     <mat-card-title>{{m_country.name}}</mat-card-title>
     <mat-card-subtitle>{{m_country.capital}}</mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image class="detail_image" src="{{m_country.flag}}" alt="Photo of the {{m_country.name}} flag">
+  <img alt="Photo of the {{m_country.name}} flag" class="detail_image" mat-card-image src="{{m_country.flag}}">
   <mat-card-content>
     <mat-tab-group>
       <mat-tab label="Generals informations">
@@ -19,8 +19,12 @@
           </mat-grid-tile>
           <mat-grid-tile>
             <mat-list role="list">
-              <mat-list-item role="listitem">region : <a mat-button routerLink="/research/region/{{m_country.region}}">{{m_country.region}}</a></mat-list-item>
-              <mat-list-item role="listitem">subregion : <a mat-button routerLink="/research/subregion/{{m_country.subregion}}">{{m_country.subregion}}</a></mat-list-item>
+              <mat-list-item role="listitem">region : 
+                <a mat-button routerLink="/research/region/{{m_country.region}}">{{m_country.region}}</a>
+              </mat-list-item>
+              <mat-list-item role="listitem">subregion : 
+                <a mat-button routerLink="/research/subregion/{{m_country.subregion}}">{{m_country.subregion}}</a>
+              </mat-list-item>
               <mat-list-item role="listitem">demonym : {{m_country.demonym}}</mat-list-item>
               <mat-list-item role="listitem">native name : {{m_country.nativeName}}</mat-list-item>
             </mat-list>
@@ -46,34 +50,34 @@
       <mat-tab label="Details">
         <mat-list role="list">
           <mat-list-item role="listitem">
-            <div>top level domain : </div>
-            <div class="detail_details" *ngFor="let s of m_country.topLevelDomain">{{s}}</div>
+            <div>top level domain :</div>
+            <div *ngFor="let s of m_country.topLevelDomain" class="detail_details">{{s}}</div>
           </mat-list-item>
           <mat-list-item role="listitem">
-            <div>calling codes : </div>
-            <div class="detail_details" *ngFor="let s of m_country.callingCodes">{{s}}</div>
+            <div>calling codes :</div>
+            <div *ngFor="let s of m_country.callingCodes" class="detail_details">{{s}}</div>
           </mat-list-item>
           <mat-list-item role="listitem">
-            <div>alt spellings : </div>
-            <div class="detail_details" *ngFor="let s of m_country.altSpellings">{{s}}</div>
+            <div>alt spellings :</div>
+            <div *ngFor="let s of m_country.altSpellings" class="detail_details">{{s}}</div>
           </mat-list-item>
           <mat-list-item role="listitem">
-            <div>latitude/longitude : </div>
-            <div class="detail_details" *ngFor="let s of m_country.latlng">{{s}}</div>
+            <div>latitude/longitude :</div>
+            <div *ngFor="let s of m_country.latlng" class="detail_details">{{s}}</div>
           </mat-list-item>
           <mat-list-item role="listitem">
-            <div>timezones : </div>
-            <div class="detail_details" *ngFor="let s of m_country.timezones">{{s}}</div>
+            <div>timezones :</div>
+            <div *ngFor="let s of m_country.timezones" class="detail_details">{{s}}</div>
           </mat-list-item>
           <mat-list-item role="listitem">
-            <div>borders : </div>
-            <a mat-button class="detail_details" *ngFor="let s of m_country.borders" (click)="redirect(s)">{{s}}</a>
+            <div>borders :</div>
+            <a (click)="redirect(s)" *ngFor="let s of m_country.borders" class="detail_details" mat-button>{{s}}</a>
           </mat-list-item>
         </mat-list>
       </mat-tab>
     </mat-tab-group>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button routerLink="/research" color="primary">GO BACK</button>
+    <button color="primary" mat-button routerLink="/research">GO BACK</button>
   </mat-card-actions>
 </mat-card>
