refactor(deadlink): create the final 404 page

--- a/src/app/generic/deadlink/deadlink.component.html
+++ b/src/app/generic/deadlink/deadlink.component.html
@@ -1,1 +1,22 @@
-<p>Deadlink 404!</p>
+<mat-toolbar class="deadlink_container" color="basic">
+    <mat-toolbar-row>
+        <span class="deadlink_spacer"></span>
+        <span class="deadlink_title">404</span>
+        <span class="deadlink_spacer"></span>
+    </mat-toolbar-row>
+    <mat-toolbar-row>
+        <span class="deadlink_spacer"></span>
+        <span class="deadlink_title">It looks like you found a</span>
+        <span class="deadlink_spacer"></span>
+    </mat-toolbar-row>
+    <mat-toolbar-row>
+        <span class="deadlink_spacer"></span>
+        <span class="deadlink_subtitle">Dead Link</span>
+        <span class="deadlink_spacer"></span>
+    </mat-toolbar-row>
+    <mat-toolbar-row>
+        <span class="deadlink_spacer"></span>
+        <img class="deadlink_image" src="{{m_img}}">
+        <span class="deadlink_spacer"></span>
+    </mat-toolbar-row>
+</mat-toolbar>
