--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -73,6 +73,22 @@
             <div>borders :</div>
             <a (click)="redirect(s)" *ngFor="let s of m_country.borders" class="detail_details" mat-button>{{s}}</a>
           </mat-list-item>
+          <mat-list-item role="listitem">
+            <div>currencies :</div>
+            <div *ngFor="let s of m_country.currencies; let i = index" class="detail_details"><div *ngIf="i>0">,</div>{{s.code}}: {{s.name}}({{s.symbol}})</div>
+          </mat-list-item>
+          <mat-list-item role="listitem">
+            <div>regional blocks :</div>
+            <div *ngFor="let s of m_country.regionalBlocs; let i = index" class="detail_details"><div *ngIf="i>0">,</div>{{s.acronym}}: {{s.name}}</div>
+          </mat-list-item>
+          <mat-list-item role="listitem">
+            <div>languages :</div>
+            <div *ngFor="let s of m_country.languages; let i = index" class="detail_details"><div *ngIf="i>0">,</div>{{s.name}}({{s.nativeName}}, {{s.iso639_1}}, {{s.iso639_2}})</div>
+          </mat-list-item>
+          <mat-list-item role="listitem">
+            <div>translations :</div>
+            <div class="detail_details">de: {{m_country.translations.de}}, es: {{m_country.translations.es}}, fr: {{m_country.translations.fr}}, ja: {{m_country.translations.ja}}, it: {{m_country.translations.it}}, br: {{m_country.translations.br}}, pt: {{m_country.translations.pt}}, nl: {{m_country.translations.nl}}, hr: {{m_country.translations.hr}}, fa: {{m_country.translations.fa}}</div>
+          </mat-list-item>
         </mat-list>
       </mat-tab>
     </mat-tab-group>
