--- a/src/app/detail-view/detail-view.component.html
+++ b/src/app/detail-view/detail-view.component.html
@@ -10,39 +10,23 @@
         <mat-grid-list cols="2" rowHeight="1:1">
           <mat-grid-tile>
             <mat-list role="list">
-              <mat-list-item role="listitem">name : {{m_country.name}}</mat-list-item>
-              <mat-list-item role="listitem">capital : {{m_country.capital}}</mat-list-item>
-              <mat-list-item role="listitem">alpha 2 code : {{m_country.alpha2Code}}</mat-list-item>
-              <mat-list-item role="listitem">alpha 3 code : {{m_country.alpha3Code}}</mat-list-item>
-              <mat-list-item role="listitem">cioc : {{m_country.cioc}}</mat-list-item>
-            </mat-list>
-          </mat-grid-tile>
-          <mat-grid-tile>
-            <mat-list role="list">
-              <mat-list-item role="listitem">region :
-                <a mat-button routerLink="/research/region/{{m_country.region}}">{{m_country.region}}</a>
+              <mat-list-item role="listitem">Name : {{m_country.name}}</mat-list-item>
+              <mat-list-item role="listitem">Capital : {{m_country.capital}}</mat-list-item>
+              <mat-list-item role="listitem">Alpha 2 code : {{m_country.alpha2Code}}</mat-list-item>
+              <mat-list-item role="listitem">Alpha 3 code : {{m_country.alpha3Code}}</mat-list-item>
+              <mat-list-item role="listitem">
+                <div>calling codes :</div>
+                <div *ngFor="let s of m_country.callingCodes">{{s}}</div>
               </mat-list-item>
-              <mat-list-item role="listitem">subregion :
-                <a mat-button routerLink="/research/subregion/{{m_country.subregion}}">{{m_country.subregion}}</a>
-              </mat-list-item>
-              <mat-list-item role="listitem">demonym : {{m_country.demonym}}</mat-list-item>
-              <mat-list-item role="listitem">native name : {{m_country.nativeName}}</mat-list-item>
-            </mat-list>
-          </mat-grid-tile>
-        </mat-grid-list>
-      </mat-tab>
-      <mat-tab label="Numbers">
-        <mat-grid-list cols="2" rowHeight="1:1">
-          <mat-grid-tile>
-            <mat-list role="list">
-              <mat-list-item role="listitem">area : {{m_country.area}}</mat-list-item>
-              <mat-list-item role="listitem">cioc : {{m_country.cioc}}</mat-list-item>
             </mat-list>
           </mat-grid-tile>
           <mat-grid-tile>
             <mat-list role="list">
-              <mat-list-item role="listitem">gini : {{m_country.gini}}</mat-list-item>
-              <mat-list-item role="listitem">numeric code : {{m_country.numericCode}}</mat-list-item>
+              <mat-list-item role="listitem">Numeric code : {{m_country.numericCode}}</mat-list-item>
+              <mat-list-item role="listitem">Demonym : {{m_country.demonym}}</mat-list-item>
+              <mat-list-item role="listitem">Native name : {{m_country.nativeName}}</mat-list-item>
+              <mat-list-item role="listitem">Gini : {{m_country.gini}}</mat-list-item>
+              <mat-list-item role="listitem">Cioc : {{m_country.cioc}}</mat-list-item>
             </mat-list>
           </mat-grid-tile>
         </mat-grid-list>
@@ -50,54 +34,53 @@
       <mat-tab label="Details">
         <mat-list role="list">
           <mat-list-item role="listitem">
-            <div>top level domain :</div>
-            <div *ngFor="let s of m_country.topLevelDomain" class="detail_details">{{s}}</div>
+            <div>Top level domain :</div>
+            <a mat-button *ngFor="let s of m_country.topLevelDomain" routerLink="/research/topLevelDomain/{{m_country.topLevelDomain}}">{{s}}</a>
           </mat-list-item>
           <mat-list-item role="listitem">
-            <div>calling codes :</div>
-            <div *ngFor="let s of m_country.callingCodes" class="detail_details">{{s}}</div>
+            <div>Alt spellings :</div>
+            <a mat-button *ngFor="let s of m_country.altSpellings" routerLink="/research/altSpellings/{{s}}">{{s}}</a>
           </mat-list-item>
           <mat-list-item role="listitem">
-            <div>alt spellings :</div>
-            <div *ngFor="let s of m_country.altSpellings" class="detail_details">{{s}}</div>
+            <div>Currencies :</div>
+            <a mat-button *ngFor="let s of m_country.currencies" routerLink="/research/currencies/{{s.toString()}}">{{s.toString()}}</a>
           </mat-list-item>
           <mat-list-item role="listitem">
-            <div>latitude/longitude :</div>
-            <div *ngFor="let s of m_country.latlng" class="detail_details">{{s}}</div>
+            <div>Languages :</div>
+            <a mat-button *ngFor="let s of m_country.languages" routerLink="/research/languages/{{s.toString()}}">{{s.toString()}}</a>
           </mat-list-item>
           <mat-list-item role="listitem">
-            <div>timezones :</div>
-            <div *ngFor="let s of m_country.timezones" class="detail_details">{{s}}</div>
+            <div>Translations :</div>
+            <div>{{m_country.translations.toString()}}</div>
+          </mat-list-item>
+        </mat-list>
+      </mat-tab>
+      <mat-tab label="Geo informations">
+        <mat-list role="list">
+          <mat-list-item role="listitem">Area : {{m_country.area}}</mat-list-item>
+          <mat-list-item role="listitem">
+            <div>Region :</div>
+            <a mat-button routerLink="/research/region/{{m_country.region}}">{{m_country.region}}</a>
           </mat-list-item>
           <mat-list-item role="listitem">
-            <div>borders :</div>
-            <a (click)="redirect(s)" *ngFor="let s of m_country.borders" class="detail_details" mat-button>{{s}}</a>
+            <div>Subregion :</div>
+            <a mat-button routerLink="/research/subregion/{{m_country.subregion}}">{{m_country.subregion}}</a>
           </mat-list-item>
           <mat-list-item role="listitem">
-            <div>currencies :</div>
-            <div *ngFor="let s of m_country.currencies; let i = index" class="detail_details">
-              <div *ngIf="i>0">,</div>
-              <div>{{s.code}}: {{s.name}}({{s.symbol}})</div>
-            </div>
+            <div>Latitude/longitude :</div>
+            <a mat-button *ngFor="let s of m_country.latlng" routerLink="/research/latlng/{{s.toString()}}">{{s.toString()}}</a>
           </mat-list-item>
           <mat-list-item role="listitem">
-            <div>regional blocks :</div>
-            <div *ngFor="let s of m_country.regionalBlocs; let i = index" class="detail_details">
-              <div *ngIf="i>0">,</div>{{s.acronym}}: {{s.name}}</div>
+            <div>Timezones :</div>
+            <a mat-button *ngFor="let s of m_country.timezones" routerLink="/research/timezones/{{s.toString()}}">{{s}}</a>
           </mat-list-item>
           <mat-list-item role="listitem">
-            <div>languages :</div>
-            <div *ngFor="let s of m_country.languages; let i = index" class="detail_details">
-              <div *ngIf="i>0">,</div>
-              <div>{{s.name}}({{s.nativeName}}, {{s.iso639_1}}, {{s.iso639_2}})</div>
-            </div>
+            <div>Borders :</div>
+            <a (click)="redirect(s)" *ngFor="let s of m_country.borders" mat-button>{{s}}</a>
           </mat-list-item>
           <mat-list-item role="listitem">
-            <div>translations :</div>
-            <div class="detail_details">de: {{m_country.translations.de}}, es: {{m_country.translations.es}},
-              fr: {{m_country.translations.fr}}, ja: {{m_country.translations.ja}}, it: {{m_country.translations.it}},
-              br: {{m_country.translations.br}}, pt: {{m_country.translations.pt}}, nl: {{m_country.translations.nl}},
-              hr: {{m_country.translations.hr}}, fa: {{m_country.translations.fa}}</div>
+            <div>Regional blocks :</div>
+            <a mat-button *ngFor="let s of m_country.regionalBlocs" routerLink="/research/regionalBlocs/{{s.toString()}}">{{s.toString()}}</a>
           </mat-list-item>
         </mat-list>
       </mat-tab>
