feat(detail-view): add population information

--- a/src/app/detail-view/detail-view.component.html
+++ b/src/app/detail-view/detail-view.component.html
@@ -14,6 +14,7 @@
               <mat-list-item role="listitem">Capital : {{m_country.capital}}</mat-list-item>
               <mat-list-item role="listitem">Alpha 2 code : {{m_country.alpha2Code}}</mat-list-item>
               <mat-list-item role="listitem">Alpha 3 code : {{m_country.alpha3Code}}</mat-list-item>
+              <mat-list-item role="listitem">Population : {{m_country.population}}</mat-list-item>
               <mat-list-item role="listitem">
                 <div>calling codes :</div>
                 <div *ngFor="let s of m_country.callingCodes">{{s}}</div>
