--- a/src/app/generic/menu/menu.component.html
+++ b/src/app/generic/menu/menu.component.html
@@ -1,9 +1,9 @@
 <mat-toolbar color="primary">
-  <a *ngFor="let l of m_LOCALROUTES" class="menu_link" mat-icon-button routerLink="{{l.m_link}}">
+  <a *ngFor="let l of m_LOCALROUTES" class="menu_link" matTooltipShowDelay="500" mat-icon-button matTooltip="{{l.m_info}}" matTooltipClass="menu_button" routerLink="{{l.m_link}}">
     <mat-icon svgIcon="{{l.m_icon}}"></mat-icon>
   </a>
   <span class="menu_spacer"></span>
-  <a *ngFor="let l of m_EXTERNALLINKS" class="menu_link" href="{{l.m_link}}" mat-icon-button target="_blank">
+  <a *ngFor="let l of m_EXTERNALLINKS" class="menu_link" matTooltipShowDelay="500" mat-icon-button matTooltip="{{l.m_info}}" matTooltipClass="menu_button" href="{{l.m_link}}" target="_blank">
     <mat-icon svgIcon="{{l.m_icon}}"></mat-icon>
   </a>
 </mat-toolbar>
