feat(home): add a first home page

--- a/src/app/generic/home/home.component.html
+++ b/src/app/generic/home/home.component.html
@@ -1,3 +1,12 @@
-<p>
-  home works!
-</p>
+<mat-toolbar class="home_container" color="basic">
+  <mat-toolbar-row>
+    <span class="home_spacer"></span>
+    <span class="home_title">Sorry</span>
+    <span class="home_spacer"></span>
+  </mat-toolbar-row>
+  <mat-toolbar-row>
+    <span class="home_spacer"></span>
+    <span class="home_title">I don't know how to fill this page</span>
+    <span class="home_spacer"></span>
+  </mat-toolbar-row>
+</mat-toolbar>
